# tel_bot

./: .gitignore  README.md  app.py  bot.py  bot_handler.py  cls_word_user.py  main.py  mongoDBcon.py  pyproject.toml  user_data.json  users.json
gimini_db/: gimini_con.py
gimini_db/generated_word_files/: ARABIC_ENGLISH_WORDS.json  ARABIC_HEBREW_WORDS.json  ENGLISH_ARABIC_WORDS.json  ENGLISH_HEBREW_WORDS.json  HEBREW_ARABIC_WORDS.json  HEBREW_ENGLISH_WORDS.json
prev_work/: app.py  cls_word_user.py  private_bot.py  users.json
private/: bot_secretes.py  cls_word_user.py  game_manger.py  model.py  user_manager.py  word_heb_arabic.json  word_manager.py
